// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RulesScreen in both directions (NFR-5) > LTR: an English rule set stays left to right (snapshot) 1`] = `
"
page -           The rules of this version in evaluation order, with the fields each one compares
page -           Findings
page -           Rule
page -           Conditions
page -           Source
page -           Action
page -           Label and id
page -           Priority
page -           age
page -           years
page -           requested_
page -           amount
page -           ₪
page -           term_
page -           months
page -           employment_
page -           type
page -           employment_
page -           months
page -           monthly_
page -           income
page -           ₪
page -           credit_
page -           events_
page -           24m
page -           has_
page -           guarantor
page -           debt_
page -           to_
page -           income
page -           derived
page -           Derivations
page -           1–99
ltr  en          Monthly installment at 10.8% annual interest
page -           R-010
page -           10
page -           ¶
page -           5
page -           set
page -           monthly_
page -           installment
ltr  en          Debt-to-income ratio
page -           R-020
page -           20
page -           >
page -           0
page -           ¶
page -           6
page -           set
page -           debt_
page -           to_
page -           income
page -           Hard eligibility gates
page -           100–199
ltr  en          Reject: younger than 21
page -           R-100
page -           100
page -           <
page -           21
page -           ¶
page -           1
page -           Decline
ltr  en          Reject: older than 65
page -           R-110
page -           110
page -           >
page -           65
page -           ¶
page -           1
page -           Decline
ltr  en          Reject: amount outside 5,000 to 120,000
page -           R-120
page -           120
page -           ∉
page -           [5,000 .. 120,000]
page -           ¶
page -           2
page -           Decline
ltr  en          Reject: term outside 6 to 72 months
page -           R-130
page -           130
page -           ∉
page -           [6 .. 72]
page -           ¶
page -           2
page -           Decline
ltr  en          Reject: unemployed
page -           R-140
page -           140
page -           =
page -           unemployed
page -           ¶
page -           3
page -           Decline
ltr  en          Reject: employed for less than 6 months
page -           R-150
page -           150
page -           =
page -           salaried
page -           <
page -           6
page -           ¶
page -           3
page -           Decline
ltr  en          Reject: self-employed for less than 18 months
page -           R-160
page -           160
page -           =
page -           self_employed
page -           <
page -           18
page -           ¶
page -           3
page -           Decline
ltr  en          Reject: net income below 7,000
page -           R-170
page -           170
page -           <
page -           7,000
page -           ¶
page -           4
page -           Decline
page -           Affordability and risk limits
page -           200–299
ltr  en          Reject: debt-to-income above 45%
page -           R-200
page -           200
page -           >
page -           0.45
page -           ¶
page -           6
page -           Decline
ltr  en          Reject: two or more adverse credit events
page -           R-220
page -           220
page -           ≥
page -           2
page -           ¶
page -           7
page -           Decline
page -           Referral conditions
page -           300–399
ltr  en          Underwriter: ratio between 40% and 45%
page -           R-320
page -           320
page -           [0.40 .. 0.45]
page -           ¶
page -           6
page -           Manual review
ltr  en          Referral: one credit event without a guarantor
page -           R-330
page -           330
page -           =
page -           1
page -           =
page -           false
page -           ¶
page -           7
page -           Manual review
page -           Positive outcome
page -           900–999
ltr  en          Approve: every condition is met
page -           R-900
page -           900
page -           ¶
page -           8
page -           Approve
"
`;

exports[`RulesScreen in both directions (NFR-5) > RTL: Hebrew labels turn right to left beside Latin ids, fields and numbers (snapshot) 1`] = `
"
page -           The rules of this version in evaluation order, with the fields each one compares
page -           Findings
page -           Rule
page -           Conditions
page -           Source
page -           Action
page -           Label and id
page -           Priority
page -           age
page -           years
page -           requested_
page -           amount
page -           ₪
page -           term_
page -           months
page -           employment_
page -           type
page -           employment_
page -           months
page -           monthly_
page -           income
page -           ₪
page -           credit_
page -           events_
page -           24m
page -           has_
page -           guarantor
page -           debt_
page -           to_
page -           income
page -           derived
page -           Derivations
page -           1–99
rtl  he          חישוב ההחזר החודשי לפי לוח שפיצר בריבית שנתית של 9%
page -           R-010
page -           10
page -           ¶
page -           5
page -           set
page -           monthly_
page -           installment
rtl  he          חישוב יחס החוב להכנסה
page -           R-020
page -           20
page -           >
page -           0
page -           ¶
page -           6
page -           set
page -           debt_
page -           to_
page -           income
page -           Hard eligibility gates
page -           100–199
rtl  he          דחייה: גיל נמוך מ-21
page -           R-100
page -           100
page -           <
page -           21
page -           ¶
page -           1
page -           Decline
rtl  he          דחייה: גיל מעל 70 (למעט גמלאים)
page -           R-110
page -           110
page -           >
page -           70
page -           ≠
page -           retired
page -           ¶
page -           1
page -           Decline
rtl  he          דחייה: גמלאי מעל גיל 75
page -           R-115
page -           115
page -           >
page -           75
page -           =
page -           retired
page -           ¶
page -           8
page -           Decline
rtl  he          דחייה: תקופת ההחזר של גמלאי מסתיימת בגיל 78 או אחריו
page -           R-116
page -           116
page -           ƒ
page -           ≥
page -           78 − term_months / 12
page -           =
page -           retired
page -           ¶
page -           8
page -           Decline
rtl  he          דחייה: סכום ההלוואה מחוץ לטווח 10,000 עד 150,000
page -           R-120
page -           120
page -           ∉
page -           [10,000 .. 150,000]
page -           ¶
page -           2
page -           Decline
rtl  he          דחייה: תקופת ההחזר מחוץ לטווח 12 עד 84 חודשים
page -           R-130
page -           130
page -           ∉
page -           [12 .. 84]
page -           ¶
page -           2
page -           Decline
rtl  he          דחייה: מבקש מובטל
page -           R-140
page -           140
page -           =
page -           unemployed
page -           ¶
page -           3
page -           Decline
rtl  he          דחייה: שכיר עם ותק נמוך מ-6 חודשים
page -           R-150
page -           150
page -           =
page -           salaried
page -           <
page -           6
page -           ¶
page -           3
page -           Decline
rtl  he          דחייה: עצמאי הפועל פחות מ-24 חודשים
page -           R-160
page -           160
page -           =
page -           self_employed
page -           <
page -           24
page -           ¶
page -           3
page -           Decline
rtl  he          דחייה: הכנסה חודשית נטו נמוכה מ-8,000
page -           R-170
page -           170
page -           <
page -           8,000
page -           ¶
page -           4
page -           Decline
page -           Affordability and risk limits
page -           200–299
rtl  he          דחייה: יחס חוב להכנסה מעל 40%
page -           R-200
page -           200
page -           >
page -           0.40
page -           ¶
page -           6
page -           Decline
rtl  he          דחייה: שני אירועי אשראי שליליים או יותר
page -           R-220
page -           220
page -           ≥
page -           2
page -           ¶
page -           7
page -           Decline
page -           Referral conditions
page -           300–399
rtl  he          בדיקה ידנית: ותק לא דווח
page -           R-310
page -           310
page -           ∈
page -           {salaried, self_employed}
page -           absent
page -           Manual review
rtl  he          בדיקת חתם: יחס חוב להכנסה בין 35% ל-40%
page -           R-320
page -           320
page -           [0.35 .. 0.40]
page -           ¶
page -           6
page -           Manual review
rtl  he          בדיקת חתם: אירוע אשראי אחד ללא ערב
page -           R-330
page -           330
page -           =
page -           1
page -           =
page -           false
page -           ¶
page -           7
page -           Manual review
page -           Advisory
page -           400–499
rtl  he          סימון: הכנסה קרובה למינימום
page -           R-410
page -           410
page -           [8,000 .. 9,000]
page -           flag
page -           INCOME_
page -           NEAR_
page -           MINIMUM
rtl  he          סימון: יציבות ההכנסה נבדקת ידנית
page -           R-420
page -           420
page -           ¶
page -           4
page -           flag
page -           STABLE_
page -           INCOME_
page -           MANUAL_
page -           CHECK
page -           Positive outcome
page -           900–999
rtl  he          אישור: כל התנאים מתקיימים
page -           R-900
page -           900
page -           ¶
page -           9
page -           Approve
"
`;
